--- a/deker_mvc/Views/Contact/Index.cshtml
+++ b/deker_mvc/Views/Contact/Index.cshtml
@@ -2,7 +2,19 @@
     ViewBag.Title = "Contact";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
+@section navbar{
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <ol class="breadcrumb" style="padding-left:0px;padding-bottom:5px;margin-bottom:5px;">
+                    <li><a href="/">首页</a></li>
+                    <li class="active">联系我们</li>
+                </ol>
+                <hr style="border-top:3px solid #D70000;margin-top:0px;" />
+            </div>
+        </div>
+    </div>
+}
 <div class="container">
     <div class="row">
         <div class="col-md-12">
