--- a/deker_mvc/Views/Shared/_Layout.cshtml
+++ b/deker_mvc/Views/Shared/_Layout.cshtml
@@ -201,17 +201,7 @@
             </nav>
         </div>
     </div>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <ol class="breadcrumb" style="padding-left:0px;padding-bottom:5px;margin-bottom:5px;">
-                    <li><a href="#">首页</a></li>
-                    <li class="active">联系我们</li>
-                </ol>
-                <hr style="border-top:3px solid #D70000;margin-top:0px;" />
-            </div>
-        </div>
-    </div>
+    @RenderSection("navbar", required: false);
     <!--header ned-->
     @RenderBody()
 
