--- a/deker_mvc/Views/Shared/_Layout.cshtml
+++ b/deker_mvc/Views/Shared/_Layout.cshtml
@@ -201,11 +201,11 @@
             </nav>
         </div>
     </div>
-    @RenderSection("navbar", required: false);
+    @RenderSection("navbar", required: false)
     <!--header ned-->
     @RenderBody()
 
-    @RenderSection("foot", required: false);
+    @RenderSection("foot", required: false)
     
     <!--foot begin-->
     <div class="container">
