--- a/deker_mvc/Views/Home/Index.cshtml
+++ b/deker_mvc/Views/Home/Index.cshtml
@@ -10,24 +10,22 @@
             <i class="icon-angle-left icon-circle-arrow-left icon-3x colorgray" style="padding-left: 70%;"></i>
             <span class="sr-only">Previous</span>
         </a>
-        <div class="container">
+        <div class="container" data-model="viewModel">
             <div id="carousel-home" class="carousel slide" data-ride="carousel">
                 <!-- Indicators -->
                 <ol class="carousel-indicators" style="display:none;">
-                    <li data-target="#carousel-home" data-slide-to="0" class="active"></li>
+                    <li data-target="#carousel-home" data-slide-to="0"></li>
+
                     <li data-target="#carousel-home" data-slide-to="1"></li>
                     <li data-target="#carousel-home" data-slide-to="2"></li>
                     <li data-target="#carousel-home" data-slide-to="3"></li>
-                    <li data-target="#carousel-home" data-slide-to="4"></li>
-                    <li data-target="#carousel-home" data-slide-to="5"></li>
                 </ol>
                 <!-- Wrapper for slides -->
-                <div class="carousel-inner" role="listbox">
+                <div class="carousel-inner" role="listbox" data-bind="foreach:lstBanner">
                     <div class="item active">
-                        <img src="/Content/uploads/carousel/400.jpg" alt="400.jpg" />
-
+                        <img data-bind="attr:{src:url,alt:key}" />
                     </div>
-                    <div class="item">
+                    @*<div class="item">
                         <img src="/Content/uploads/carousel/SZ7.jpg" alt="SZ7.jpg" />
                     </div>
                     <div class="item">
@@ -42,7 +40,7 @@
                     </div>
                     <div class="item">
                         <img src="/Content/uploads/carousel/CV20.jpg" alt="CV20.jpg" />
-                    </div>
+                    </div>*@
                 </div>
             </div>
             <!-- Controls -->
@@ -289,4 +287,32 @@
         });
     });
 </script>
+<script>
+    function ViewModel(config) {
+        var self = this;
+        //初始化整个界面用到的api地址
+        var urlBanner = "/api/values/getBanners";
+        self.lstBanner = ko.observableArray([]);
+
+        self.GetBannerList = function () {
+            $.ajax({
+                url: urlBanner + "?d=" + new Date(),
+                type: "get",
+                async: true,
+                data: {},
+                beforeSend: function () {
+                },
+                success: function (d) {
+                    self.lstBanner = d;
+                }
+            });
+        }
+        self.GetBannerList();
+    }
+    $(function () {
+        var viewModel = new ViewModel(null);
+        ko.attach("viewModel", viewModel);
+    });
+</script>
+
 }
