--- a/deker_mvc/Views/Shared/_Layout.cshtml
+++ b/deker_mvc/Views/Shared/_Layout.cshtml
@@ -45,7 +45,7 @@
             }
         -->
     </style>
-    <script>
+    @*<script>
         var _hmt = _hmt || [];
         (function () {
             var hm = document.createElement("script");
@@ -53,7 +53,7 @@
             var s = document.getElementsByTagName("script")[0];
             s.parentNode.insertBefore(hm, s);
         })();
-    </script>
+    </script>*@
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -469,9 +469,9 @@
                 <!--<script src="/js/jquery.min.js"></script> -->
                 <!-- Include all compiled plugins (below), or include individual files as needed -->
                 @*<script src="js/bootstrap.min.js"></script>*@
-                <script src="js/jquery.pin.js"></script>
+                @*<script src="js/jquery.pin.js"></script>*@
                 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-                <script src="js/ie10-viewport-bug-workaround.js"></script>
+                @*<script src="js/ie10-viewport-bug-workaround.js"></script>*@
 
                 
 
