--- a/deker_mvc/Views/Home/Contact.cshtml
+++ b/deker_mvc/Views/Home/Contact.cshtml
@@ -3,299 +3,66 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="container">
+<div class="container-fluid carousel-background">
     <div class="row">
-        <div class="col-md-12">
-            <h1><strong>联系我们</strong></h1>
-        </div>
-    </div>
-    <div class="row" style="margin-left:0px;margin-right:0px;border-top:2px dotted #dcdcdc;">
-        <div class="col-md-12">
-            &nbsp;<br />&nbsp;
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-4 col-xs-12">
-            <p>
-                <strong>上海步科自动化股份有限公司（总部）</strong><br /><br />
-                地址：中国（上海）自由贸易试验区申江路5709号、秋月路26号<br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;3幢北侧三楼<br />
-                电话：021-6879 8588<br />
-                传真：021-6879 7688<br />
-                Email：sales@kinco.cn<br />
-                <a href="../../api.map.baidu.com/geocoder_DDB720C4" target="_blank" class="colorred">点击查看地图</a>
-            </p>
-        </div>
-        <div class="col-md-4 col-xs-12">
-            <p>
-                <strong>深圳市步科电气有限公司</strong><br /><br />
-                地址：深圳市南山区高新科技园北区朗山一路6号1栋<br />
-                电话：0755-2658 5555<br />
-                传真：0755-26616372<br />
-                Email：sales@kinco.cn<br />
-                <a href="../../api.map.baidu.com/geocoder_757BE88A" target="_blank" class="colorred">点击查看地图</a>
-            </p>
-        </div>
-        <div class="col-md-4 col-xs-12">
-            <div class="row empty">
-                <div class="col-md-4 empty">
-                    &nbsp;
-                </div>
-                <div class="col-md-2 empty text-right">
-                    <img src="images/icon_tel.png" alt="电话" />
-                </div>
-                <div class="col-md-6 empty text-right">
-                    <h1 class="empty" style="padding-bottom:5px;font-size:22px;">400 700 5281</h1>
-                    <h5 class="empty">销售/技术支持热线/企业QQ</h5>
-                    <h5 class="empty" style="color:#8a8a8a">(周一至周五 8:30~17:30)</h5>
-                </div>
-            </div>
-            <div class="row empty">
-                <div class="col-md-12 empty">
-                    &nbsp;
-                </div>
-            </div>
-            <div class="row empty">
-                <div class="col-md-4 empty">
-                    &nbsp;
-                </div>
-                <div class="col-md-8 empty">
-                    <button type="button" class="btn btn-danger btn-block" style="border-radius:10px;" data-toggle="modal" data-target="#myModal">在线留言</button>
-                </div>
-                <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-                    <div class="modal-dialog">
-                        <div class="modal-content">
-                            <div class="modal-body">
-                                <form action="store/index.htm" method="POST" class="form-horizontal">
-                                    <div class="form-group">
-                                        <label for="iuput-name" class="col-sm-2 control-label colorwhite">您的称呼<span class="colorred">*</span></label>
-                                        <div class="col-sm-5">
-                                            <input type="text" class="form-control radius-message" name="customername" required="required" id="iuput-name" placeholder="您的称呼">
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="iuput-tel" class="col-sm-2 control-label colorwhite">电话<span class="colorred">*</span></label>
-                                        <div class="col-sm-5">
-                                            <input type="tel" class="form-control radius-message" name="customertel" required="required" id="iuput-tel" placeholder="电话">
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="iuput-email" class="col-sm-2 control-label colorwhite">E-mail<span class="colorred">*</span></label>
-                                        <div class="col-sm-5">
-                                            <input type="email" class="form-control radius-message" name="customeremail" required="required" id="iuput-email" placeholder="E-mail">
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="iuput-title" class="col-sm-2 control-label colorwhite">地区<span class="colorred">*</span></label>
-                                        <div class="col-sm-8">
-                                            <select class="form-control radius-message" name="customerarea" required="required" id="iuput-area" placeholder="地区">
-                                                <option value="1">江苏，浙江，上海，安徽</option>
-                                                <option value="2">广东，广西，福建，湖北，湖南</option>
-                                                <option value="3">四川，重庆，贵州，云南，西藏，江西</option>
-                                                <option value="4">河北，北京，天津，河南，山东，内蒙，陕西</option>
-                                                <option value="5">山西，宁夏，青海，新疆，吉林，黑龙江，辽宁</option>
-                                            </select>
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="iuput-title" class="col-sm-2 control-label colorwhite">主题</label>
-                                        <div class="col-sm-5">
-                                            <input type="text" class="form-control radius-message" name="messagetitle" id="iuput-title" placeholder="主题">
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="iuput-note" class="col-sm-2 control-label colorwhite">您的留言</label>
-                                        <div class="col-sm-9">
-                                            <textarea class="form-control radius-message" name="messagecontent" id="iuput-note" rows="5" placeholder="您的留言"></textarea>
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <div class="col-sm-2">
-                                            &nbsp;
-                                        </div>
-                                        <div class="col-sm-9">
-                                            <button type="submit" class="btn btn-danger radius-message" style="width:100px;">提交</button>
-                                            <input type="hidden" name="_token" value="zSPviX96ZWbukhGu1FfhFOa6j6Psle4F6rZdbv30">
-                                        </div>
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
+        <a class="carousel-control left carousel-arrow" style="top: 230px;" href="#carousel-home" role="button" data-slide="prev">
+            <i class="icon-angle-left icon-circle-arrow-left icon-3x colorgray" style="padding-left: 70%;"></i>
+            <span class="sr-only">Previous</span>
+        </a>
+        <div class="container">
+            <div id="carousel-home" class="carousel slide"  data-model="viewModel">
+                <!-- Indicators -->
+                <ol class="carousel-indicators" style="display:none;">
+                    <li data-target="#carousel-home" data-slide-to="0" class="active"></li>
+                    <li data-target="#carousel-home" data-slide-to="1"></li>
+                    <li data-target="#carousel-home" data-slide-to="2"></li>
+                    <li data-target="#carousel-home" data-slide-to="3"></li>
+                </ol>
+                <!-- Wrapper for slides -->
+                <div class="carousel-inner" role="listbox">
+                    <div data-bind="foreach:lstBanner">
+                        <img data-bind="attr:{ src:img,alt:key}" />
                     </div>
                 </div>
             </div>
-            <div class="row empty">
-                <div class="col-md-12 empty">
-                    &nbsp;
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row" style="margin-left:0px;margin-right:0px;border-top:2px dotted #dcdcdc;">
-        <div class="col-md-12">
-            &nbsp;<br />&nbsp;
+            <!-- Controls -->
+            <a class="right carousel-control carousel-arrow" style="top: 230px;" href="#carousel-home" role="button" data-slide="next">
+                <i class="icon-angle-right icon-circle-arrow-right icon-3x colorgray" style="padding-left: 20%;"></i>
+                <span class="sr-only">Next</span>
+            </a>
         </div>
     </div>
 </div>
 
-<div class="container">
-    <div class="row empty">
-        <div class="col-md-12 empty">
-            <h3><strong>办事处联系方式查询</strong></h3>
-        </div>
-    </div>
 
-    <div class="row">
-        <div class="col-md-12 col-xs-12">
-            <div class="table-responsive">
-                <table class="table table-striped table-hover" style="table-layout:fixed;">
-                    <thead>
-                        <tr class="table-head-th2">
-                            <th style="width:15%">办事处</th>
-                            <th style="width:15%;border-left:2px solid #ffffff;border-right:2px solid #ffffff;">联系人</th>
-                            <th style="width:15%;border-left:2px solid #ffffff;border-right:2px solid #ffffff;">电话</th>
-                            <th style="width:15%;border-left:2px solid #ffffff;border-right:2px solid #ffffff;">邮箱</th>
-                            <th style="width:40%">负责区域</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>
-                                <i class="icon-angle-right"></i> 深圳办事处
-                            </td>
-                            <td>尹承祥</td>
-                            <td>15919437181</td>
-                            <td>yincx@kinco.cn</td>
-                            <td>深圳市,惠州市</td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <i class="icon-angle-right"></i> 东莞办事处
-                            </td>
-                            <td>沈建平</td>
-                            <td>18680470840</td>
-                            <td>shenjp@kinco.cn</td>
-                            <td>东莞市</td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <i class="icon-angle-right"></i> 广州办事处
-                            </td>
-                            <td>沈建平</td>
-                            <td>18680470840</td>
-                            <td>shenjp@kinco.cn</td>
-                            <td>广西省,广东除深圳,惠州以外地区</td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <i class="icon-angle-right"></i> 成都办事处
-                            </td>
-                            <td>熊芯</td>
-                            <td>13908235318</td>
-                            <td>xiongxin@kinco.cn</td>
-                            <td>四川省,重庆市,,贵州省,云南省,西藏</td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <i class="icon-angle-right"></i> 武汉办事处
-                            </td>
-                            <td>丁涛</td>
-                            <td>13986030239</td>
-                            <td>dingtao@kinco.cn</td>
-                            <td>湖北省,江西省,湖南省</td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <i class="icon-angle-right"></i> 上海办事处
-                            </td>
-                            <td>潘洋</td>
-                            <td>13761905258</td>
-                            <td>panyang@kinco.cn</td>
-                            <td>上海市</td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <i class="icon-angle-right"></i> 杭州办事处
-                            </td>
-                            <td>郝东</td>
-                            <td>13957140237</td>
-                            <td>haodong@kinco.cn</td>
-                            <td>浙江省</td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <i class="icon-angle-right"></i> 苏州办事处
-                            </td>
-                            <td>王刚</td>
-                            <td>13771770385</td>
-                            <td>wanggang@kinco.cn</td>
-                            <td>苏州市,无锡市,常州市</td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <i class="icon-angle-right"></i> 南通办事处
-                            </td>
-                            <td>李晓星</td>
-                            <td>13914777085</td>
-                            <td>lixx@kinco.cn</td>
-                            <td>江苏省其它地区</td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <i class="icon-angle-right"></i> 南京办事处
-                            </td>
-                            <td>刘奕</td>
-                            <td>17705186269</td>
-                            <td>liuyi@kinco.cn</td>
-                            <td>南京市,镇江市,安徽省</td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <i class="icon-angle-right"></i> 青岛办事处
-                            </td>
-                            <td>赵春浩</td>
-                            <td>15318701230</td>
-                            <td>zhaoch@kinco.cn</td>
-                            <td>青岛市,日照市,临沂市,威海市,烟台市</td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <i class="icon-angle-right"></i> 济南办事处
-                            </td>
-                            <td>高裕卿</td>
-                            <td>18615285162</td>
-                            <td>gaoyq@kinco.cn</td>
-                            <td>山东其它地区</td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <i class="icon-angle-right"></i> 北京办事处
-                            </td>
-                            <td>毋宁</td>
-                            <td>13676977159</td>
-                            <td>wuning@kinco.cn</td>
-                            <td>北京市,天津市,河北省,内蒙古,东三省（辽宁、吉林、黑龙江）</td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <i class="icon-angle-right"></i> 郑州办事处
-                            </td>
-                            <td>陈兴盛</td>
-                            <td>13803851125</td>
-                            <td>chenxs@kinco.cn</td>
-                            <td>河南省,陕西省,山西省,宁夏,青海,新疆</td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <i class="icon-angle-right"></i> 厦门办事处
-                            </td>
-                            <td>赖乾华</td>
-                            <td>13615919389</td>
-                            <td>laiqh@kinco.cn</td>
-                            <td>福建省+汕头+泉州</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-    </div>
-</div>
+@section scripts{
+    <script>
+        function ViewModel(config) {
+            var self = this;
+            //初始化整个界面用到的api地址
+            var urlBanner = "/api/values/getBanners";
+            self.lstBanner = ko.observableArray([]);
+
+            self.GetBannerList = function () {
+                $.ajax({
+                    url: urlBanner + "?d=" + new Date(),
+                    type: "get",
+                    async: true,
+                    data: {},
+                    beforeSend: function () {
+                    },
+                    success: function (d) {
+                        for (var i = 0; i < d.length; i++) {
+                            self.lstBanner.push(d[i]);
+                        }
+                    }
+                });
+            }
+            self.GetBannerList();
+        }
+        $(function () {
+            var viewModel = new ViewModel(null);
+            ko.attach("viewModel", viewModel);
+        });
+    </script>
+}
