--- a/deker_mvc/Views/Home/Contact.cshtml
+++ b/deker_mvc/Views/Home/Contact.cshtml
@@ -20,7 +20,7 @@
                 </ol>
                 <!-- Wrapper for slides -->
                 <div class="carousel-inner" role="listbox">
-                    <div data-bind="foreach:lstBanner">
+                    <div class="item" data-bind="foreach:lstBanner">
                         <img data-bind="attr:{ src:img,alt:key}" />
                     </div>
                 </div>
