--- a/deker_mvc/Views/Home/Index.cshtml
+++ b/deker_mvc/Views/Home/Index.cshtml
@@ -14,26 +14,19 @@
             <div id="carousel-home" class="carousel slide" data-ride="carousel">
                 <!-- Indicators -->
                 <ol class="carousel-indicators" style="display:none;">
-                    <li data-target="#carousel-home" data-slide-to="0" class="active"></li>
-                    <li data-target="#carousel-home" data-slide-to="1"></li>
-                    <li data-target="#carousel-home" data-slide-to="2"></li>
-                    <li data-target="#carousel-home" data-slide-to="3"></li>
+                    @for (var i = 0; i < ViewBag.Banner.Count; i++)
+                    {
+                        <li data-target="#carousel-home" data-slide-to="@i" @Html.Raw((i==0)?"class=\"active\"":"")></li>
+                    }
                 </ol>
                 <!-- Wrapper for slides -->                
                 <div class="carousel-inner" role="listbox">
-                    <div class="item active">
-                        <img src="/Content/uploads/carousel/400.jpg" alt="400.jpg" />
-
-                    </div>
-                    <div class="item">
-                        <img src="/Content/uploads/carousel/SZ7.jpg" alt="SZ7.jpg" />
-                    </div>
-                    <div class="item">
-                        <img src="/Content/uploads/carousel/CM.jpg" alt="CM.jpg" />
-                    </div>
-                    <div class="item">
-                        <img src="/Content/uploads/carousel/MT4030banner.jpg" alt="MT4030banner.jpg" />
-                    </div>
+                    @for (var i = 0; i < ViewBag.Banner.Count; i++)
+                    {
+                        <div class="item @Html.Raw(i==0?"active":"")">
+                            <img src="@ViewBag.Banner[i].img" alt="@ViewBag.Banner[i].key" />
+                        </div>
+                    }
                 </div>
             </div>
             <!-- Controls -->
