--- a/deker_mvc/Views/Solution/Index.cshtml
+++ b/deker_mvc/Views/Solution/Index.cshtml
@@ -95,7 +95,7 @@
                         <tr>
                             <td class="hy-body-text">
                                 <i class=" icon-angle-right icon-large colorred"></i>
-                                <a href="/solution/detail" class="colorblack" data-bind="text:title"></a>
+                                <a href="/solution/detail" class="colorblack" data-bind="text:title,attr:{href:'/solution/detail/'+aid}"></a>
                             </td>
                             <td class="hy-body-text" data-bind="text:content"></td>
                             <td class="hy-body-text">
