--- a/deker_mvc/Views/Solution/Index.cshtml
+++ b/deker_mvc/Views/Solution/Index.cshtml
@@ -110,7 +110,12 @@
 <div class="container">
     <div class="row">
         <div class="col-md-12 col-xs-12 text-right">
-            <ul class="pagination"><li class="disabled"><span>&laquo;</span></li> <li class="active"><span>1</span></li><li><a href="query_41878854">2</a></li> <li><a href="query_41878854" rel="next">&raquo;</a></li></ul>
+            <ul class="pagination">
+                <li class="disabled"><span>&laquo;</span></li>
+                <li class="active"><span>1</span></li>
+                <li><a href="query_41878854">2</a></li>
+                <li><a href="query_41878854" rel="next">&raquo;</a></li>
+            </ul>
         </div>
     </div>
 </div>
