--- a/deker_mvc/Views/Solution/test.cshtml
+++ b/deker_mvc/Views/Solution/test.cshtml
@@ -6,31 +6,34 @@
 }
 
 <div class="text-center">
-    <div class="pagination"></div>
+    <ul class="pagination"></ul>
 </div>
 
 @section scripts{
 <script src="/Scripts/pager.js"></script>
 <script>
-    $('.pagination').bsPagination({
-        totalRecord: 200,
-        recordPerPage: 10,
-        currentPage: 3,
-        setLinkAttr: function (page) {
-            return 'href="#/page/' + page + '"';
-        }
-    });
-
-    
-    $('.pagination').on('click', 'a', function () {
+    $(function () {
         $('.pagination').bsPagination({
             totalRecord: 200,
-            currentPage: $(this).data('page'),
+            recordPerPage: 10,
+            currentPage: 3,
             setLinkAttr: function (page) {
-                return 'href="#/page/' + page + '"';
+                return 'href="javascript:alert(' + page + ')"';
             }
         });
-    });
+
+
+        //$('.pagination').on('click', 'a', function () {
+        //    $('.pagination').bsPagination({
+        //        totalRecord: 200,
+        //        currentPage: $(this).data('page'),
+        //        setLinkAttr: function (page) {
+        //            return 'href="#/page/' + page + '"';
+        //        }
+        //    });
+        //});
+    })
+    
 </script>
 
 }
