--- a/deker_mvc/Content/main_new.css
+++ b/deker_mvc/Content/main_new.css
@@ -1235,3 +1235,5 @@ td > .MagicZoomPlus > img, td > .MagicZoomPlus.magic-for-ie8 > img {
   padding-bottom: 10px;
   background-color: #dcdcdc;
 }
+
+a.logo{}
