--- a/deker_mvc/Views/Shared/_Layout.cshtml
+++ b/deker_mvc/Views/Shared/_Layout.cshtml
@@ -70,20 +70,20 @@
             <div class="col-md-12">&nbsp;</div>
         </div>
         <div class="row">
-            <div class="col-md-2 col-sm-3"><a href="index.htm"><img src="/images/logo_kinco.png" alt="步科Logo" /></a></div>
+            <div class="col-md-2 col-sm-3"><a href="index.htm" class="logo">@*<img src="/images/logo_andly.png" alt="安德利Logo" style="top:-30px;height:25px;" />*@<span> </span></a></div>
             <div class="col-md-3 col-sm-3" style="padding-top:5px;">
                 <img src="/images/language_icon.png" alt="语言" />
                 <a class="bordernone" tabindex="0" id="languagelink" role="button" data-toggle="popover" data-trigger="click"
                    data-placement="right" data-html="true"
                    data-content='
-                    <a class="colorgray2" href="../en.kinco.cn">English</a><br /><a class="colorgray2" href="http://ru.kinco.cn">русский</a>'><span class="colorgray">Language |</span><span class="colorred">中文</span>
+                    <a class="colorgray2" href="http://en.andly.com">English</a><br /><a class="colorgray2" href="http://www.andly.com">中文</a>'><span class="colorgray">Language</span> | <span class="colorred">中文</span>
                 </a>
             </div>
             <div class="col-md-3 col-sm-6 text-right">
-                <a class="btn btn-xs btn-info" href="../web.kinco.cn">返回旧站</a>
+                @*<a class="btn btn-xs btn-info" href="../web.kinco.cn">返回旧站</a>*@
             </div>
             <div class="col-md-4 col-sm-6">
-                <form action="product/search/index.htm" method="POST" class="form-horizontal">
+                <form action="/home/search" method="POST" class="form-horizontal">
                     <div class="input-group">
                         <input type="text" name="key" class="form-control" placeholder="搜索你需要的产品或资料">
                         <span class="input-group-btn">
