--- a/deker_mvc/Views/Contact/Index.cshtml
+++ b/deker_mvc/Views/Contact/Index.cshtml
@@ -18,7 +18,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-12">
-            <h1><strong>联系我们</strong></h1>
+            <h1><strong>安德利包装设备有限公司 </strong></h1>
         </div>
     </div>
     <div class="row" style="margin-left:0px;margin-right:0px;border-top:2px dotted #dcdcdc;">
@@ -27,24 +27,14 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-md-4 col-xs-12">
+        <div class="col-md-8 col-xs-12">
             <p>
-                <strong>上海步科自动化股份有限公司（总部）</strong><br /><br />
-                地址：中国（上海）自由贸易试验区申江路5709号、秋月路26号<br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;3幢北侧三楼<br />
-                电话：021-6879 8588<br />
-                传真：021-6879 7688<br />
-                Email：sales@kinco.cn<br />
-                <a href="../../api.map.baidu.com/geocoder_DDB720C4" target="_blank" class="colorred">点击查看地图</a>
-            </p>
-        </div>
-        <div class="col-md-4 col-xs-12">
-            <p>
-                <strong>深圳市步科电气有限公司</strong><br /><br />
-                地址：深圳市南山区高新科技园北区朗山一路6号1栋<br />
-                电话：0755-2658 5555<br />
-                传真：0755-26616372<br />
-                Email：sales@kinco.cn<br />
-                <a href="../../api.map.baidu.com/geocoder_757BE88A" target="_blank" class="colorred">点击查看地图</a>
+                &nbsp;&nbsp;&nbsp;&nbsp;立足深圳，作为一家专业的自动化包装设备制造商，在多年的生产制造、客户服务过程中积累了大量的成功经验，拥有完全自主知识产权的相关技术，开发了适应不同需求的自动化包装设备，广泛适用于食品、制药、日化、五金电子等领域。
+                <br />&nbsp;&nbsp;&nbsp;&nbsp;生产的包装设备系列：
+                <br />&nbsp;&nbsp;&nbsp;&nbsp;伺服热封口机械：往复式立式包装机，水平间歇包装机，三伺服枕式包装机，盒杯机，自动抽真空包装机等
+                <br />&nbsp;&nbsp;&nbsp;&nbsp;伺服收缩封切机：边封型、L型封切机，PE裹包收缩机等。
+                <br />&nbsp;&nbsp;&nbsp;&nbsp;包装标识设备：激光喷码机，平面贴标机等
+                <br />&nbsp;&nbsp;&nbsp;&nbsp;安德利以推动包装工业自动化为己任,与客户共同打造工业自动化时代，帮助企业提高生产效率和产品质量，降低生产成本。我们经过多年的发展，汇集了一批在行业内享有盛誉的高素质专业人才，构成了强大的研发队伍及高效率的生产、销售团队，并引进与吸收国际先进的生产管理和质量控制程序，一如既往地在品质上精益求精，永不止步，致力于为客户提供更先进、更精密、更智能的生产包装设备。
             </p>
         </div>
         <div class="col-md-4 col-xs-12">
