--- a/deker_mvc/Views/Shared/_Layout.cshtml
+++ b/deker_mvc/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     @*<meta http-equiv="X-UA-Compatible" content="IE=edge">*@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
-    <title>Kinco步科 - 自动化与智能化产品及解决方案供应商</title>
+    <title>Andly安德利 - 自动化与智能化产品及解决方案供应商</title>
 
     <meta name="description" content="Kinco步科服务热线400-700-5281,步科以帮助更多的人产生创意,将创意变成产品为愿景,以自动化与智能化的产品和解决方案,帮助更多客户造就成功的小而美的智慧工厂,是帮助客户的创新经营取得成功的伙伴.">
     <meta name="keywords" content="步科,eView,Kinco,步科官网,人机界面,伺服系统,伺服驱动器,伺服电机,变频器,PLC,可编程控制器,步进驱动器,步进电机,智慧工厂,物流自动化,印刷包装,医药行业,3C,新能源,汽车,自动化解决方案,智能化解决方案,触摸屏,步科触摸屏,HMI,步科组态软件,自动化产品">
@@ -70,7 +70,7 @@
             <div class="col-md-12">&nbsp;</div>
         </div>
         <div class="row">
-            <div class="col-md-2 col-sm-3"><a href="index.htm" class="logo">@*<img src="/images/logo_andly.png" alt="安德利Logo" style="top:-30px;height:25px;" />*@<span> </span></a></div>
+            <div class="col-md-2 col-sm-3" style="height:56px;"><a href="/"><img src="/images/logo_andly.png" alt="安德利Logo" style="top:-20px;width:164px;height:76px;position:relative;" /></a></div>
             <div class="col-md-3 col-sm-3" style="padding-top:5px;">
                 <img src="/images/language_icon.png" alt="语言" />
                 <a class="bordernone" tabindex="0" id="languagelink" role="button" data-toggle="popover" data-trigger="click"
@@ -97,9 +97,9 @@
                 <!-- /input-group -->
             </div>
         </div>
-        <div class="row">
+        @*<div class="row">
             <div class="col-md-12">&nbsp;</div>
-        </div>
+        </div>*@
     </div>
     <div class="container-fluid">
         <div class="row">
