--- a/deker_mvc/Views/Shared/_Layout.cshtml
+++ b/deker_mvc/Views/Shared/_Layout.cshtml
@@ -232,7 +232,7 @@
                             </div>
                             <div class="col-md-12">
                                 <img src="/images/pic_weixin_code.png" alt="微信" />
-                                <br /><span class="colorwhite" style="color:#8a8a8a;font-size:12px;">官方微信：kinco步科</span>
+                                <br /><span class="colorwhite" style="color:#8a8a8a;font-size:12px;">官方微信：andly安德利</span>
                             </div>
                             <div class="col-md-12">
                                 &nbsp;<br /><br />
@@ -242,8 +242,10 @@
                                     <img src="/images/icon_tel.png" alt="电话" />
                                 </div>
                                 <div class="col-md-9" style="padding-left:20px;">
-                                    <h1 class="colorwhite empty" style="padding-bottom:5px;font-size:22px;">400 700 5281</h1>
-                                    <h5 class="colorwhite empty">销售/技术支持热线/企业QQ</h5>
+                                    <h5 class="colorwhite empty">电话：0755-27610394</h5>
+                                    <h5 class="colorwhite empty">电话：0755-27601335</h5>
+                                    <div style="height:8px;"></div>
+                                    <h5 class="colorwhite empty">传真：0755-27649287</h5>
                                     <h5 class="empty" style="color:#8a8a8a">(周一至周五 8:30~17:30)</h5>
                                 </div>
                             </div>
@@ -256,7 +258,7 @@
                                 </div>
                                 <div class="col-md-9" style="padding-left:20px;">
                                     <h5 class="empty" style="color:#a1a1a2">&nbsp;</h5>
-                                    <a href="mailto:sales@kinco.cn"><h4 class="empty" style="color:#fefefe">sales@kinco.cn</h4></a>
+                                    <a href="mailto:sz@andly.com"><h4 class="empty" style="color:#fefefe">sz@andly.com</h4></a>
                                 </div>
                             </div>
                         </div>
@@ -267,47 +269,25 @@
                                 <dl>
                                     <dt><h3 class="colorwhite">产品中心</h3></dt>
                                     <dd><h5 style="padding:0px;margin-top:0px;margin-bottom:-15px;">&nbsp;</h5></dd>
-                                    <dd><h5><a class="colorwhite" href="product/hmi/index.htm">人机界面</a></h5></dd>
-                                    <dd><h5><a class="colorwhite" href="product/plc/index.htm">PLC</a></h5></dd>
-                                    <dd><h5><a class="colorwhite" href="product/servo/index.htm">伺服</a></h5></dd>
-                                    <dd><h5><a class="colorwhite" href="product/stepper/index.htm">步进</a></h5></dd>
-                                    <dd><h5><a class="colorwhite" href="product/vfd/index.htm">变频器</a></h5></dd>
-                                    <dd><h5><a class="colorwhite" href="product/smartfactory/index.htm">智慧工厂</a></h5></dd>
+                                    <dd><h5><a class="colorwhite" href="product/hmi/index.htm">伺服热封口机械</a></h5></dd>
+                                    <dd><h5><a class="colorwhite" href="product/plc/index.htm">收缩封切机械</a></h5></dd>
+                                    <dd><h5><a class="colorwhite" href="product/servo/index.htm">真空包装设备</a></h5></dd>
+                                    <dd><h5><a class="colorwhite" href="product/stepper/index.htm">包装标识设备</a></h5></dd>
                                 </dl>
                             </div>
                             <div class="col-md-2 col-xs-6">
                                 <dl>
                                     <dt><h3 class="colorwhite">行业方案</h3></dt>
-                                    <dd><h5 style="padding:0px;margin-top:0px;margin-bottom:-15px;">&nbsp;</h5></dd>
-                                    <dd><h5><a class="colorwhite" href="solution/factory/index.htm">智慧工厂</a></h5></dd>
-                                    <dd><h5><a class="colorwhite" href="solution/logistics/index.htm">物流自动化</a></h5></dd>
-                                    <dd><h5><a class="colorwhite" href="solution/pack/index.htm">印刷包装</a></h5></dd>
-                                    <dd><h5><a class="colorwhite" href="solution/armarium/index.htm">医药行业</a></h5></dd>
-                                    <dd><h5><a class="colorwhite" href="solution/ccc/index.htm">3C行业</a></h5></dd>
-                                    <dd><h5><a class="colorwhite" href="solution/energy/index.htm">新能源行业</a></h5></dd>
-                                    <dd><h5><a class="colorwhite" href="solution/auto/index.htm">汽车行业</a></h5></dd>
                                 </dl>
                             </div>
                             <div class="col-md-2 col-xs-6">
                                 <dl>
                                     <dt><h3 class="colorwhite">资料下载</h3></dt>
-                                    <dd><h5 style="padding:0px;margin-top:0px;margin-bottom:-15px;">&nbsp;</h5></dd>
-                                    <dd><h5><a class="colorwhite" href="download/software/all/index.htm">软件</a></h5></dd>
-                                    <dd><h5><a class="colorwhite" href="download/model/all/index.htm">选型手册</a></h5></dd>
-                                    <dd><h5><a class="colorwhite" href="download/use/all/index.htm">使用手册</a></h5></dd>
-                                    <dd><h5><a class="colorwhite" href="download/cad/all/index.htm">CAD/3D图纸</a></h5></dd>
-                                    <dd><h5><a class="colorwhite" href="download/accredit/all/index.htm">资质认证</a></h5></dd>
                                 </dl>
                             </div>
                             <div class="col-md-2 col-xs-6">
                                 <dl>
                                     <dt><h3 class="colorwhite">客户服务</h3></dt>
-                                    <dd><h5 style="padding:0px;margin-top:0px;margin-bottom:-15px;">&nbsp;</h5></dd>
-                                    <dd><h5><a class="colorwhite" href="service/repair/index.htm">售后维修</a></h5></dd>
-                                    <dd><h5><a class="colorwhite" href="service/qa/index.htm">常见问题</a></h5></dd>
-                                    <dd><h5><a class="colorwhite" href="service/ku/index.htm">步科大学</a></h5></dd>
-                                    <dd><h5><a class="colorwhite" href="service/bbs/index.htm">技术论坛</a></h5></dd>
-                                    <dd><h5><a class="colorwhite" href="service/terms/index.htm">服务条款</a></h5></dd>
                                 </dl>
                             </div>
                             <div class="col-md-2 col-xs-6">
@@ -341,7 +321,7 @@
                         &nbsp;
                     </div>
                     <div class="col-md-12" class="beian001" style="height:50px;">
-                        <h5 style="color:#8a8a8a" class="beian001">版权所有© 2015 步科 <a href="../www.miitbeian.gov.cn/index.htm" class="beian001" style="text-decoration:none">粤ICP备05082025号</a></h5>
+                        <h5 style="color:#8a8a8a" class="beian001">版权所有© @Html.Raw(DateTime.Now.Year) 安德利 <a href="http://www.miitbeian.gov.cn/index.htm" class="beian001" style="text-decoration:none">粵ICP备05048864号</a></h5>
                     </div>
                 </div>
             </div>
