--- a/deker_mvc/Views/About/Index.cshtml
+++ b/deker_mvc/Views/About/Index.cshtml
@@ -23,25 +23,10 @@
                     <h2>关于步科</h2>
                 </div>
                 <div class="col-md-12 aboutkinco-menu aboutkinco-submenu">
-                    <a href="index.htm">公司简介</a>
+                    <a href="/About">公司简介</a>
                 </div>
                 <div class="col-md-12 aboutkinco-menu aboutkinco-submenu">
-                    <a href="../histroy/index.htm">公司历史</a>
-                </div>
-                <div class="col-md-12 aboutkinco-menu aboutkinco-submenu">
-                    <a href="../culture/index.htm">公司文化</a>
-                </div>
-                <div class="col-md-12 aboutkinco-menu aboutkinco-submenu">
-                    <a href="../company-dynamic/index.htm">公司动态</a>
-                </div>
-                <div class="col-md-12 aboutkinco-menu aboutkinco-submenu">
-                    <a href="../product-dynamic/index.htm">产品动态</a>
-                </div>
-                <div class="col-md-12 aboutkinco-menu aboutkinco-submenu">
-                    <a href="../environmental/index.htm">环保预案</a>
-                </div>
-                <div class="col-md-12 aboutkinco-menu aboutkinco-submenu">
-                    <a href="../talents/index.htm">人才招聘</a>
+                    <a href="/About/Qualification">企业资质</a>
                 </div>
             </div>
         </div>
