--- a/deker_mvc/Views/Shared/_Layout.cshtml
+++ b/deker_mvc/Views/Shared/_Layout.cshtml
@@ -122,9 +122,9 @@
                                 <a class="dropdown-toggle background-red cursor-pointer" role="button" data-toggle="dropdown" href="#"><span class="nav-text">产品中心</span></a>
                                 <ul id="ulPMenu" class="dropdown-menu popover bottom" style="width:100%;" data-bind="foreach:menuLst">
                                     <li class="nav-menu-hmi" onclick="window.location.href='/home/productlist'">
-                                        <span><a class="nav-menu-sub-title" data-bind="text:type_name,attr:{href:'/home/ProductList/'+ type_id }">place holder</a></span><br />
+                                        <span><a class="nav-menu-sub-title" data-bind="text:type_name,attr:{href:'/home/ProductType/'+ type_id }">place holder</a></span><br />
                                         <span data-bind="foreach:Child">
-                                            <a class="nav-menu-sub-detail" data-bind="text:type_name,attr:{href:'/home/ProductList/'+ type_id }">place holder</a><br />
+                                            <a class="nav-menu-sub-detail" data-bind="text:type_name,attr:{href:'/home/ProductType/'+ type_id }">place holder</a><br />
                                         </span>
                                     </li>
                                 </ul>
@@ -139,7 +139,7 @@
                                 <a class="cursor-pointer" href="/service"><span class="nav-text">客户服务</span></a>
                             </li>
                             <li class="col-sm-home-2 col-md-home-2 col-lg-home-2 background-nav text-center menu-about">
-                                <a class="cursor-pointer" href="/about"><span class="nav-text">关于步科</span></a>
+                                <a class="cursor-pointer" href="/about"><span class="nav-text">关于我们</span></a>
                             </li>
                             <li class="col-sm-home-2 col-md-home-2 col-lg-home-2 background-nav text-center menu-contact">
                                 <a class="cursor-pointer" href="/contact"><span class="nav-text">联系我们</span></a>
